# shortnuts

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: global.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/: shortcut-button.tsx  shortcuts.tsx
src/components/ui/: switch.tsx
src/pages/: app.tsx  settings.tsx
